[ui] fixes (frappe/erpnext#6252) (frappe/erpnext#6275) (#2023)
* [ui] fix navbar overlap

* [ui][mobile] fix user-background-image

--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -59,7 +59,7 @@
 
 @media (max-width: 767px) {
 	.navbar-desk {
-		width: 50% !important;
+		width: 40% !important;
 	}
 }
 
